[package]
name = "contractNFT"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "contract_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = "0.21.0"
anchor-spl = "0.21.0"
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"]}
serde = "1.0.136"
serde_json = "1.0.64"
